# Dynamometer-UI

./: CMakeLists.txt  CMakeLists.txt.user.CSjqki  CMakeLists.txt.user.dxtlJz  Dyno.qmlproject  Dyno.qmlproject.qtds  Dyno.qmlrc  Dyno.qrc  compile_commands.json  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcgaugewidget.cpp  qcgaugewidget.h  qcustomplot.cpp  qmlmodules  ui_dialog.h  ui_mainwindow.h
